--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -7,6 +7,7 @@
              leaflet
              (leafletMapMoveEnd)="onMapMoveEnd($event)"
              [leafletLayersControl]="layersControl"
+             [leafletLayers]="layers"
              [leafletOptions]="mapOptions">
         </div>
       </div>
