Add simple limit control and scaling for the size of the requests to Geonode API.

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -6,6 +6,7 @@
         <div *ngIf="mapOptions" class="mx-auto"
              leaflet
              (leafletMapMoveEnd)="onMapMoveEnd($event)"
+             (leafletZoomChange)="setZoomLevel($event)"
              [leafletLayersControl]="layersControl"
              [leafletLayers]="layers"
              [leafletOptions]="mapOptions">
